Added authentication and access control

--- a/EventOrganizerAPI/appsettings.json
+++ b/EventOrganizerAPI/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "Authentication": {
+    "JwtKey": "PRIVATE_KEY_EVENTORGANIZERAPI",
+    "JwtExpireDays": 15,
+    "JwtIssuer":  "EventOrganizerAPI"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
