Fixed relation user-event (delete atendee)

--- a/EventOrganizerAPI/EventOrganizerAPI.csproj
+++ b/EventOrganizerAPI/EventOrganizerAPI.csproj
@@ -25,11 +25,9 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
-  <ItemGroup>
-    <Folder Include="IServices\" />
-    <Folder Include="wwwroot\" />
-  </ItemGroup>
+
 
 </Project>
