--- a/EventOrganizerAPI/appsettings.json
+++ b/EventOrganizerAPI/appsettings.json
@@ -14,6 +14,6 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "EventOrganizerDbConnection": "Server=DESKTOP-6P9T3S4;Database=EventDb;Trusted_Connection=true;Trust Server Certificate=true"
+    "EventOrganizerDbConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=EventDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   }
 }
